--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <script>
     // Pageview
-    trackPageview({
+    trackPageView({
       pageName: document.body.dataset.pageName || "home",
       siteSection: "root"
     });
