--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
   </main>
 
   <script>
-    trackPageview({
+    trackPageView({
       pageName: document.body.dataset.pageName || "products",
       siteSection: "catalog"
     });
