--- a/cart.html
+++ b/cart.html
@@ -23,7 +23,7 @@
   </main>
 
   <script>
-    trackPageview({
+    trackPageView({
       pageName: document.body.dataset.pageName || "cart",
       siteSection: "checkout"
     });
