--- a/_vendor.html
+++ b/_vendor.html
@@ -8,3 +8,18 @@ Examples:
 This file gets inlined in each page via serverless include (copy-pasted here at build time).
 On GitHub Pages this is just static HTML included by each page.
 -->
+
+<!-- HEAD SNIPPET -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TLCPHRZZ');</script>
+<!-- End Google Tag Manager -->
+
+<!-- BODY SNIPPET -->
+ <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TLCPHRZZ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
