changing text on pages

--- a/product.html
+++ b/product.html
@@ -54,10 +54,7 @@
     </main>
 
     <footer>
-      <p>
-        Demo site for analytics testing. Add your tag manager (GTM / Adobe
-        Launch) snippet into <code>_vendor.html</code>.
-      </p>
+      <p>GTM Installed on site</p>
     </footer>
     <div class="debug" id="debugPanel" aria-live="polite">
       <strong>Debug Panel</strong>
